# Interaction-Concordance-Index

./: .gitignore  A_index.pyx  CGKronRLS_predictions.py  IC_index.c  IC_index.cp38-win_amd64.pyd  LICENSE  MANIFEST.in  README.md  cindex_measure.py  data.py  example.py  figures.R  pyproject.toml  setup.py  swapped.c  swapped.cp38-win_amd64.pyd  swapped.pyx
# src/ic_index/: swapped.pxd
.github/workflows/: publish-pypi.yml
Experiment/: CGKronRLS_predictions.py  README.md  data.py  figures.R  figures_real.R  figures_simulation.R  ltr_solver_multiview_013.py  ltr_wrapper.py  performance.py  simulation.py  sklearn_predictions.py
Experiment/deepdta/source/: arguments.py  datahelper.py  emetrics.py
Experiment/drug-target-feedforward-main/: README.md  arguments.py  datahelper.py  feedforward_regression.py
Experiment/graphdta/: README.md  create_cv_data.py  graphdta_davis_s1.sh  graphdta_davis_s2.sh  graphdta_kiba_s1.sh  graphdta_kiba_s2.sh  graphdta_kiba_s3.sh  graphdta_kiba_s4.sh  training.py  training_cv.py  training_validation.py  utils.py
deepdta/: README.md
deepdta/source/: arguments.py  datahelper.py  deepdta_davis_s1_f0.sh  deepdta_kiba_s1_f0.sh  emetrics.py  run_cv.py
drug-target-feedforward-main/: datahelper.py  feedforward_binary.py  select_hyperparameters.py
graphdta/: README.md  graphdta_davis_s3.sh  graphdta_davis_s4.sh
src/: ic_index.pyx
src/ic_index/: __init__.py  ic_index.pyx  swapped.pxd  swapped.pxi  swapped.pyx
