[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools>=61",
    "wheel",
    "cython>=3.0.0",
    "numpy>=2.0.0",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "ic_index"
version = "0.1.0"
authors = [
    {name = "Tapio Pahikkala"},
    {name = "Riikka Numminen"},
    {name = "Parisa Movahedi"},
    {name = "Napsu Karmitsa"},
    {name = "Antti Airola"}
]
description = "Interaction concordance index"
readme = "README.md"
requires-python = ">=3.11",
dependencies = [
    "numpy>=2.0.0",
]

