[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools>=80",
    "wheel",
    "Cython>=3.0.0",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "ic_index"
version = "0.1.1"
authors = [
    {name = "Tapio Pahikkala"},
    {name = "Riikka Numminen"},
    {name = "Parisa Movahedi"},
    {name = "Napsu Karmitsa"},
    {name = "Antti Airola"}
]
description = "Standalone Python module providing an implementation of interaction concordance index."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/TurkuML/Interaction-Concordance-Index"

