[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools>=80",
    "setuptools-scm>=8",
    "wheel",
    "Cython>=3.0.0",
    "numpy>=2.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/ic_index/_version.py"

[project]
name = "ic_index"
dynamic = ["version"]
authors = [
    {name = "Tapio Pahikkala"},
    {name = "Riikka Numminen"},
    {name = "Parisa Movahedi"},
    {name = "Napsu Karmitsa"},
    {name = "Antti Airola"}
]
description = "Standalone Python module providing an implementation of interaction concordance index."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/TurkuML/Interaction-Concordance-Index"

